--- a/404.html
+++ b/404.html
@@ -1,3 +1,10 @@
 <script>
   window.location.replace("/");
 </script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=./index.html" />
+  </head>
+  <body></body>
+</html>
